try to fix the 2 buttons in individual project issue on mobile

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -425,7 +425,8 @@ footer {
 }
 
 .project-live-code-button {
-	place-self: center;
+	align-self: center;
+	justify-self: center;
 }
 
 .project-live-code-button button {
